# r2unity

./: .gitignore  LICENSE  Makefile  README.md  meson.build  meson_options.txt  release.sh
.github/workflows/: ci.yml
doc/: datvsbin.md  files.md  future.md  pinvoke.md  ptrtables.md  r2unity.md  resources.md  sbom.md  strings.md  todo.md
r2plugin/: README.md  config.mk  meson.build  r2plugins.h  static.cfg
r2plugin/core/: deps.h  deps.mk  meson.build
src/: main.c
src/lib/: bgdatabase.c  bgdatabase.h  elf.c  lib.c  lib.h  macho.c  paths.c  pe.c  resource_pack.c  resource_pack.h  sbom.c  serialized_file.c  serialized_file.h
src/r2/: Makefile  bin_r2unity.c  core_r2unity.c
